--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-rangeslider": "^2.1.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "tone": "^0.10.0"
+    "tone": "^0.10.0",
+    "worker-loader": "^0.8.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
