--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "15.6.1",
+    "react-app-rewired": "^1.0.11",
     "react-dom": "15.6.1",
     "react-rangeslider": "^2.1.0",
     "react-router": "^4.1.2",
