--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-rangeslider": "^2.1.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "sharp11": "^1.1.4",
     "tonal": "^0.69.7",
     "tone": "^0.10.0",
     "worker-loader": "^0.8.1"
