--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "react": "15.6.1",
     "react-app-rewired": "^1.0.11",
