--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "jquery": "^3.2.1",
-    "lodash": "^4.17.4",
+    "konva": "^1.6.8",
     "react": "15.6.1",
     "react-app-rewired": "^1.0.11",
     "react-dom": "15.6.1",
